--- a/ocarina2/TODO
+++ b/ocarina2/TODO
@@ -1,3 +1,5 @@
 Protezione alle CSFR tramite token;
 Bugfix del /REPORT;
-Skin `mobile`.
+Skin `mobile`;
+if(have_time())
+	Ereditarietà perfetta, in modo che da un'unica classe hai accesso a tutti i metodi.
